fix line wrapping in <pre> & <code> elements

--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ code, pre {
     font-family: var(--font-mono);
     padding: 0.01em 0.25em;
     border-radius: 0.2em;
+    white-space: pre-wrap;
 }
 
 ul {
